--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -68,14 +68,18 @@
 }
 @mixin grayscale($prc){
     $webkit-amt: $prc / 100;
-    -webkit-filter: grayscale($webkit-amt); -webkit-filter: grayscale(100%); -moz-filter: grayscale(100%);
-    filter: gray; filter: grayscale(100%);
+    -webkit-filter: grayscale($webkit-amt); -webkit-filter: grayscale($webkit-amt); -moz-filter: grayscale($webkit-amt);
+    filter: gray; filter: grayscale($webkit-amt);
     filter: url(desaturate.svg#greyscale);
 }
 %add-grayscale {
     -webkit-filter: grayscale(1); -webkit-filter: grayscale(100%); -moz-filter: grayscale(100%);
     filter: gray; filter: grayscale(100%);
-    filter: url(desaturate.svg#greyscale);
+    // filter: url(desaturate.svg#greyscale);
+    
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+ */
+    -webkit-transition: all .6s ease; /* Fade to color for Chrome and Safari */
+    -webkit-backface-visibility: hidden; /* Fix for transition flickering */
 }
 %remove-grayscale {
     filter: none; /* Applies to FF + IE */
