--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -15,10 +15,10 @@
 }
 
 @mixin globalText {
-    color:          #ccc;
+    color:          #aaa;
     font-family:    "Dosis", sans-serif;
     font-size:      17px;
-    line-height:    24px;
+    line-height:    27px;
     font-weight:    100;
     letter-spacing: 0.7px;
 
