--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -86,9 +86,13 @@ h2 {
 h3 {
     margin: 0px 0 15px 0;
     padding: 5px 7px 5px;
-    font-size: 95%;
+    font-size: 15px;
     line-height: 130%;
     letter-spacing: 1px;
+
+    @include max_laptop{
+        font-size: 12px;
+    }
 
     i {
         margin-right: 5px;
