--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -312,6 +312,9 @@
             margin-top: 10px;
         }
     }
+    strong {
+        color: white;
+    }
 }
 .media {
     margin-bottom: 30px;
