--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -73,17 +73,13 @@
     filter: url(desaturate.svg#greyscale);
 }
 %add-grayscale {
-    -webkit-filter: grayscale(1); -webkit-filter: grayscale(100%); -moz-filter: grayscale(100%);
-    filter: gray; filter: grayscale(100%);
-    // filter: url(desaturate.svg#greyscale);
-    
-    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+ */
-    -webkit-transition: all .6s ease; /* Fade to color for Chrome and Safari */
-    -webkit-backface-visibility: hidden; /* Fix for transition flickering */
+    filter: url("data:image/svg+xml;utf8,&lt;svg xmlns=\'http://www.w3.org/2000/svg\'&gt;&lt;filter id=\'grayscale\'&gt;&lt;feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/&gt;&lt;/filter&gt;&lt;/svg&gt;#grayscale") !important; /* Firefox 10+, Firefox on Android */
+    filter: gray !important; /* IE6-9 */
+    -webkit-filter: grayscale(100%) !important; /* Chrome 19+, Safari 6+, Safari 6+ iOS */
 }
 %remove-grayscale {
-    filter: none; /* Applies to FF + IE */
-    -webkit-filter: grayscale(0);
+    filter: none !important; /* Applies to FF + IE */
+    -webkit-filter: grayscale(0) !important;
 }
 
 @mixin center-vertically($h1, $h2) {
