--- a/assets/scss/_page-specific.scss
+++ b/assets/scss/_page-specific.scss
@@ -312,7 +312,7 @@
             margin-top: 10px;
         }
     }
-    strong {
+    strong, p strong {
         color: white !important;
     }
 }
